<resources>

    <string name="app_name" translatable="false">Sudhar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_track">Track</string>
    <string name="menu_send">Send</string>
    <string name="menu_viewProblems">View Reports</string>
    <string name="menu_reportProblems">Report a Problem</string>

    <string name="dummy_string" translatable="false">Lorem Ipsum</string>
    <string name="dummy_line" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur id dapibus massa. Vivamus ultricies eros nec nibh consequat fringilla. Sed in nisl ut diam pretium tempor a non lorem.</string>
    <string name="dummy_paragraph" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur id dapibus massa. Vivamus ultricies eros nec nibh consequat fringilla. Sed in nisl ut diam pretium tempor a non lorem. Donec sollicitudin mauris sed urna pharetra, sit amet luctus leo luctus. In ac turpis gravida, fringilla dui eu, accumsan turpis. Duis non dictum lorem. In eu risus in nulla varius laoreet at sit amet sapien. Etiam imperdiet ante non erat laoreet, vel facilisis enim imperdiet. Pellentesque ullamcorper ultrices libero, vitae aliquet metus rutrum ut. Curabitur efficitur ex sit amet ligula hendrerit, at feugiat ante mollis. Maecenas sodales, nulla eget mollis semper, tellus massa gravida ante, at convallis dui leo id purus. Maecenas posuere est in dignissim ornare. Cras consectetur odio ex, in rhoncus tellus molestie nec.</string>
    <!-- Side Navigation-->

    <string name="enter_your_nickname">What shall we call you ?</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="save_this_information">save my settings</string>
    <string name="verify_via_OTP">Verify via OTP</string>
    <string name="enter_OTP">Enter the OTP here</string>
    <string name="proceed">Proceed</string>
    <string name="attatch_my_location">Attatch my location</string>
    <string name="choose_a_picture">Choose a picture</string>
    <string name="no_image_selected">No picrure selected</string>
    <string name="enter_exact_address">Exact address of problem</string>
    <string name="enter_landmark">Enter a landmark</string>
    <string name="enter_description">Any other description</string>
    <string name="post_the_problem">Post the problem</string>
    <string name="required">*Required</string>
    <string name="choose_password">Choose a password</string>
    <string name="enter_password">Enter your password</string>
    <string name="create_signup">Don\'t have an account ? Click here</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="login">Login</string>
    <string name="password_dont_match">Both passwords should match</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="instructions_to_use">Hi. Welcome to <b>Sudhar</b>. To get started, click the menu button on the upper right corner. Then select an option</string>
    <string name="loginInstruction">*details stored automatically</string>
    <string name="forgotPassword">Forgot your password ?</string>
    <string name="backButtonPrompt">Click back again to quit</string>
    <string name="internetoff">No Internet connection available. Try again later</string>
    <string name="sendOTP">Send OTP</string>
    <string name="OtpTimeOut">OTP time expired. please retry</string>
    <string name="OtpEmpty">OTP field can not be empty</string>
    <string name="OtpMatchError">OTP did not match</string>
    <string name="OtpMatchSuccess">OTP verification successful</string>
    <string name="signUpSuccess">You were successfully signed up and Logged in</string>
    <string name="signUpFailure">The sign up process could not complete. Please try later</string>
    <string name="checkYourOtp">If the email was valid , an OTP has been sent to it.</string>
    <string name="upvote">upvote</string>
    <string name="downvote">downvote</string>

    <string name="your_data">Let\'s Begin with some details</string>
    <string name="confirm">Confirm</string>
    <string name="what_is_sudhar">What is Sudhar</string>
    <string name="select_your_state">Select your state</string>

    <string name="fill_this_value">fill this value</string>
    <string name="fill_correct_value">fill correct value</string>

    <string name="welcome">Welcome,</string>
    <string name="edit_preferences">Edit\nPreferences</string>
    <string name="delete_my_profile">Delete my Sudhar Profile</string>
    <string name="log_out">Log out of Sudhar</string>
    <string name="do_u_wanna_log_out">Do you really wish to log out ?</string>

    <string name="choose_your_language">Choose your language</string>
    <string name="contact_us">Want to contact us ? just click here</string>
    <string name="enter_problem_id">Enter Problem Code here</string>

    <string name="track_progress">TRACK PROGRESS</string>
    <string name="processing">Processing…</string>

    <!---->

    <!-- status words -->
    <string name="received">Received</string>
    <string name="verified">Verified</string>
    <string name="under_progress">Under Progress</string>
    <string name="completed">completed</string>
    <string name="denied">Denied</string>
    <string name="unknown">Unknown</string>

    <!-- snack bar prompts -->
    <string name="error">An error has occurred. Let\'s try again</string>

    <!-- array of material colors -->
    <string-array name="lightMaterialColors">
        <item>#52de97</item>
        <item>#be9fe1</item>
        <item>#ffb74d</item>
        <item>#ffb6b9</item>
        <item>#bcaaa4</item>
        <item>#fae3d9</item>
        <item>#bbded6</item>
        <item>#a98274</item>
        <item>#ce93d8</item>
        <item>#8ac6d1</item>
        <item>#c9b6e4</item>
        <item>#ec518a</item>
        <item>#ffad76</item>
        <item>#a5f8b5</item>

        <!-- added new pallet -->
        <item>#f8bbd0</item>
        <item>#e1bee7</item>
        <item>#f48fb1</item>
        <item>#e57373</item>
        <item>#d1c4e9</item>
        <item>#90caf9</item>
        <item>#80deea</item>
        <item>#80cbc4</item>
        <item>#dce775</item>
    </string-array>

    <string-array name="darkMaterialColors">
        <item>#c62828</item>
        <item>#ad1457</item>
        <item>#6a1b9a</item>
        <item>#283593</item>
        <item>#00796b</item>
        <item>#e65100</item>
        <item>#ff4081</item>
        <item>#5e35b1</item>
        <item>#0091ea</item>
        <item>#304ffe</item>
        <item>#e53935</item>
    </string-array>
    <string name="title_activity_maps" translatable="false">Map</string>

    <string-array name="languages">
        <item>English</item>
        <item>हिंदी</item>
    </string-array>

    <!-- TODO -->
</resources>
