<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_view_reports"
        android:name="com.sih2020.project.viewReports.ViewReportsFragment"
        android:label="@string/menu_viewProblems"
        tools:layout="@layout/fragment_view_reports_depricated" />

    <fragment
        android:id="@+id/nav_report_problem"
        android:name="com.sih2020.project.reportProblem.ReportProblemFragment"
        android:label="@string/menu_reportProblems"
        tools:layout="@layout/fragment_report_problem" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sih2020.project.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_track"
        android:name="com.sih2020.project.track.TrackFragment"
        android:label="@string/menu_track"
        tools:layout="@layout/fragment_track" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.sih2020.project.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

</navigation>