<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_view_reports"
            android:icon="@drawable/view_reports"
            android:title="@string/menu_viewProblems" />

        <item
            android:id="@+id/nav_report_problem"
            android:icon="@drawable/report_problem"
            android:title="@string/menu_reportProblems" />
    </group>

    <item android:title="TRACKING">
        <menu>
            <item
                android:id="@+id/nav_track"
                android:icon="@drawable/track"
                android:title="@string/menu_track" />
        </menu>
    </item>

</menu>
