<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- login screen -->
        <LinearLayout
            android:id="@+id/user_login_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/p7"
            android:visibility="gone">

            <!-- email -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email"
                android:padding="@dimen/p1"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/quicksand_semibold"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/xl" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- password -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:padding="@dimen/p1"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/quicksand_semibold"
                    android:inputType="textPassword"
                    android:textSize="@dimen/xl" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- verify and proceed -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/blendOrangeBrown"
                android:fontFamily="@font/quicksand_semibold"
                android:padding="@dimen/p2"
                android:text="@string/login"
                android:textSize="@dimen/l" />

            <com.romainpiel.shimmer.ShimmerTextView
                android:id="@+id/signupLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/m2"
                android:text="@string/create_signup"
                android:textColor="#444"
                android:textSize="@dimen/md" />

            <com.romainpiel.shimmer.ShimmerTextView
                android:id="@+id/forgotPasswordLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/m2"
                android:text="@string/forgotPassword"
                android:textColor="#444"
                android:textSize="@dimen/md" />


        </LinearLayout>

        <!-- register user information -->
        <LinearLayout

            android:id="@+id/register_user_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/p7"
            android:visibility="visible">

            <!-- email -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email"
                android:padding="@dimen/p1"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/quicksand_semibold"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/xl" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- send OTP -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/checkEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/blendOrangeBrown"
                android:fontFamily="@font/quicksand_semibold"
                android:padding="@dimen/p2"
                android:text="@string/sendOTP"
                android:textSize="@dimen/l" />

            <!-- enter OTP -->
                <EditText
                    android:layout_gravity="center"
                    android:padding="@dimen/p1"
                    android:id="@+id/verifyOTP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_regular"
                    android:hint="@string/enter_OTP"
                    android:inputType="number"
                    android:textSize="@dimen/h1"
                    android:importantForAutofill="no" />

            <!-- send OTP -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/blendOrangeBrown"
                android:fontFamily="@font/quicksand_semibold"
                android:padding="@dimen/p2"
                android:text="@string/verify_via_OTP"
                android:textSize="@dimen/l" />

            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/signupToggelable"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <!-- name -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_nickname"
                    android:padding="@dimen/p1"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/quicksand_semibold"
                        android:inputType="textPersonName"
                        android:textSize="@dimen/xl" />

                </com.google.android.material.textfield.TextInputLayout>


                <!-- password -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/choose_password"
                    android:padding="@dimen/p1"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/quicksand_semibold"
                        android:inputType="textPassword"
                        android:textSize="@dimen/xl" />

                </com.google.android.material.textfield.TextInputLayout>

                <!-- confirm password -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:padding="@dimen/p1"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/quicksand_semibold"
                        android:inputType="textPassword"
                        android:textSize="@dimen/xl" />

                </com.google.android.material.textfield.TextInputLayout>


                <!-- verify and proceed -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signupButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/blendOrangeBrown"
                    android:fontFamily="@font/quicksand_semibold"
                    android:padding="@dimen/p2"
                    android:text="@string/proceed"
                    android:textSize="@dimen/l" />

                <TextView
                    android:layout_marginTop="@dimen/m1"
                    android:gravity="bottom"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loginInstruction" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>