<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:background="@drawable/intro_data_back" android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".intro.IntroData">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/your_data"
            android:theme="@style/HeadingWhite"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent" />


        <Spinner
            android:id="@+id/introData_spinner"
            android:layout_width="331dp"

            android:layout_height="64dp"

            android:layout_marginTop="432dp"
            android:background="@drawable/rounded_corners_transparent"
            android:backgroundTint="@color/backgroundOrange"
            android:elevation="@dimen/cardElevation"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="331dp"
            android:layout_height="106dp"
            android:layout_marginTop="160dp"
            android:hint="@string/enter_your_nickname"
            android:padding="@dimen/p1"
            app:errorEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_corners_transparent"
                android:fontFamily="@font/quicksand_semibold"
                android:inputType="textPersonName"
                android:textSize="@dimen/xl" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/p2"

            android:layout_gravity="center"

            android:layout_marginTop="548dp"
            android:fontFamily="@font/quicksand_semibold"
            android:text="@string/confirm"
            android:textSize="@dimen/l"
            app:cornerRadius="@dimen/defaultRadius"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline3"

            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginBottom="4dp"

            android:text="@string/select_your_state"
            app:layout_constraintBottom_toTopOf="@+id/introData_spinner"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="@+id/guideline3" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="331dp"
            android:layout_height="106dp"
            android:layout_marginTop="284dp"
            android:hint="@string/enter_your_email"
            android:padding="@dimen/p1"
            app:errorEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_corners_transparent"
                android:fontFamily="@font/quicksand_semibold"
                android:inputType="textPersonName"
                android:textSize="@dimen/xl" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/b2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/b2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>